--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="../src/assets/favico.ico" />
+    <link rel="shortcut icon" href="../src/assets/favico.ico" type="image/x-icon">
     <title>Sistema de Pedidos</title>
   </head>
   <body>
