--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="../src/assets/favico.ico" type="image/x-icon">
-    <title>Sistema de Pedidos</title>
-  </head>
-  <body>
-   
-    <div id="root"></div>
-   
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="shortcut icon" href="../src/assets/favico.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+  <title>Sistema de Pedidos</title>
+</head>
+
+<body>
+
+  <div id="root"></div>
+
+</body>
+
 </html>
